k8s/ingress/saleor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/graphql"
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 9002
